# bipf-rs

./: .gitignore  Cargo.toml  README.md  build.rs  index.js  package-lock.json  package.json  test.js
.github/workflows/: rust.yml
benches/: my_benchmark.rs
src/: bindgen_impl.rs  bipf.rs  lib.rs  neon_impl.rs
src/bipf/: map.rs
test/: index.js  perf.js
