[package]
name = "bipf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version ="1.0", features = ["preserve_order"] }
integer-encoding = "3.0"
either = "1.6"
indexmap = "1.7"
bytes = "1.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
fake = "2.4"

[[bench]]
name = "my_benchmark"
harness = false