[package]
name = "bipf-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A Rust port of https://github.com/ssbc/bipf"
homepage = "https://github.com/jerive/bipf-rs"
repository = "https://github.com/jerive/bipf-rs.git"
exclude = ["index.node"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version ="1.0", features = ["preserve_order"] }
integer-encoding = "3.0"
either = "1.6"
indexmap = "1.7"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "my_benchmark"
harness = false